Fixed alignment of elements

--- a/components/sections/section/section.style.css
+++ b/components/sections/section/section.style.css
@@ -46,3 +46,15 @@ hr{
 .editsec{
 	margin-left: 150px;
 }
+
+.chance{
+	margin-left: 30px;
+}
+
+.inputchance{
+	width: 50px;
+}
+
+.moreinfo{
+	margin: 0 auto;
+}
